--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -278,10 +278,10 @@
             </nav>
             <!-- End Navbar -->
         </div>
-
         <div class="container">
             <div class="page-inner">
                     @RenderBody()
+                    @Html.Partial("_Notification")
             </div>
         </div>
 
