--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
@@ -303,6 +303,7 @@
         <section class="section">
             <div class="container-fluid">
                 @RenderBody()
+                @Html.Partial("_Notification")
             </div>
             <!-- end container -->
         </section>
