--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -313,6 +313,7 @@
     <div class="">
         <main role="main" class="pb-3">
             @RenderBody()
+			@Html.Partial("_Notification")
         </main>
     </div>
 
