--- a/final-project-fe/Pages/Admin/ReportManager/UsersReport/Index.cshtml
+++ b/final-project-fe/Pages/Admin/ReportManager/UsersReport/Index.cshtml
@@ -26,6 +26,7 @@
     </ul>
 </div>
 
+<partial name="_ConfirmDialog" />
 <div class="container mt-4">
     @if (Model.GroupedReportUsers?.Items != null && Model.GroupedReportUsers.Items.Any())
     {
@@ -115,13 +116,17 @@
                         <!-- Action buttons -->
                         <div class="mt-3 pt-3 border-top">
                             <div class="d-flex justify-content-end gap-2">
-                                <button class="btn btn-sm btn-warning"
-                                        onclick="handlePost(@group.Id, 'warn')">
-                                    <i class="fas fa-exclamation-triangle"></i> Warning
-                                </button>
                                 <form method="post" asp-page="/Admin/ReportManager/UsersReport/DeleteReport" asp-page-handler="DeleteReport" asp-route-id="@group.Id" class="d-inline">
                                     <button class="btn btn-sm btn-success"
-                                            onclick="return confirm('Are you sure you want to Ignore reports for this user?')">
+                                            onclick="event.preventDefault(); showConfirm({
+                                    type: 'info' ,
+                                    title: 'Ignore reports' ,
+                                    message: 'Are you sure you want to delete these reports?' ,
+                                    confirmText: 'Delete' ,
+                                    cancelText: 'Cancel' ,
+                                    onConfirm: ()=>
+                                this.closest('form').submit()
+                                })">
                                         <i class="fas fa-check"></i> Ignore reports
                                     </button>
                                 </form>
