--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -2558,6 +2558,8 @@
 		}
 	</script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 	<style>
 		/*category-tag*/
 		.category-selector-container {
