--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
@@ -293,6 +293,7 @@
     <div class="">
         <main role="main" class="pb-3">
             @RenderBody()
+			@Html.Partial("_Notification")
         </main>
     </div>
 
