--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -123,9 +123,9 @@
                                             <span class="sub-item">List Transaction</span>
                                         </a>
                                     </li>
-                                    <li class="@(ViewData["ActivePage"] as string == "PostManager.ListDeleted" ? "active" : "")">
-                                        <a asp-page="/Admin/PostManager/ListDeleted">
-                                            <span class="sub-item">List Deleted</span>
+                                    <li class="@(ViewData["ActivePage"] as string == "TransactionManager.ListPayment" ? "active" : "")">
+                                        <a asp-page="/Admin/TransactionManager/Payment">
+                                            <span class="sub-item">List Payment</span>
                                         </a>
                                     </li>
                                 </ul>
