Add Withdrawal of Admin and Mentor

--- a/final-project-fe/Pages/Admin/Dashboard/Index.cshtml
+++ b/final-project-fe/Pages/Admin/Dashboard/Index.cshtml
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col col-stats ms-3 ms-sm-0">
                         <div class="numbers">
-                            <p class="card-category">Memberships</p>
+                            <p class="card-category">User Premiums</p>
                             <h4 class="card-title">@Model.TotalMemberships</h4>
                         </div>
                     </div>
