--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -69,8 +69,8 @@
 												<a href="/UserCourse" title="">My Own Course</a>
 											</li>
 											<li>
-												<i class="ti-bell"></i>
-												<a href="#" title="">Notifications</a>
+												<i class="bi bi-wechat"></i>
+												<a href="/Chatting" title="">Chatting</a>
 											</li>
 										</ul>
 									</div><!-- Shortcuts -->
